--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "script.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "cp .env.example .env && nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.2",
     "clarifai": "^2.5.0",
     "cors": "^2.8.4",
+    "dotenv": "^8.1.0",
     "express": "^4.16.2",
     "knex": "^0.14.2",
     "pg": "^7.4.0"
